# q2-trimmomatic

./: .dockerignore  .flake8  Dockerfile  demultiplexed-sequences.qza  pyproject.toml
q2_trimmomatic/: __init__.py  _pipelines.py  _trimmomatic.py  plugin_setup.py
tests/: test_pipelines.py  test_trimmomatic.py
