[project]
name = "q2-trimmomatic"
version = "0.1.0"
description = "QIIME2 plugin for trimmomatic"
authors = []
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.2",
    "numpy>=1.23.5",
]

[project.entry-points."qiime2.plugins"]
"q2-trimmomatic" = "q2_trimmomatic.plugin_setup:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["q2_trimmomatic"]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "codespell>=2.2.2",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.293",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
# black-compatible formatting
